# wyzely-detect

./: .deepsource.toml  .dockerignore  .gitignore  .pyproject.toml.old  .python-version  Dockerfile  LICENSE  README.md  deepface-test.ipynb  docker-compose.yml  environment.yml  main.py  pyproject.toml  pyproject.toml.old  requirements.txt
.devcontainer/: .devcontainer.json
.github/workflows/: docker.yml  python-publish.yml
config/: config.json  example-config.json
rye/: README.md  pyproject.toml
rye/src/rye/: __init__.py
set-detect-notify/: __main__.py
set-detect-notify/utils/: config_utils.py  notify.py  utils.py
set_detect_notify/: __main__.py
set_detect_notify/utils/: notify.py  utils.py
src/: __main__.py
src/utils/: config_utils.py  notify.py
wyzely_detect/: __main__.py
wyzely_detect/utils/: cli_args.py  notify.py  utils.py
