[tool.poetry]
name = "wyzely-detect"
version = "0.1.0"
description = "Recognize faces/objects in a video stream (from a webcam or a security camera) and send notifications to your devices"
authors = ["slashtechno <77907286+slashtechno@users.noreply.github.com>"]
repository = "https://github.com/slashtechno/wyzely-detect"
keywords = ["object-detection", "face-detection", "wyze", "security", "yolov8", "unified-push"]
license = "MIT"
readme = "README.md"
packages = [{include = "wyzely_detect"}]

[tool.poetry.dependencies]

# Works on 3.10 and 3.11, at least in my testing
python = ">=3.10, <3.12"

python-dotenv = "^1.0.0"
httpx = "^0.25.0"
opencv-python = "^4.8.1.78"
ultralytics = "^8.0.190"
hjson = "^3.1.0"
numpy = "^1.23.2"

# https://github.com/python-poetry/poetry/issues/6409
torch = ">=2.0.0, !=2.0.1, !=2.1.0"

# https://stackoverflow.com/a/76477590/18270659
# https://discuss.tensorflow.org/t/tensorflow-io-gcs-filesystem-with-windows/18849/4
# Might be able to remove this version constraint later
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.14.0"


deepface = "^0.0.79"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
ipykernel = "^6.25.2"
nbconvert = "^7.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# More than the default (88) of `black` to make comments less of a headache
# Where possible, `black` will attempt to format to 88 characters
# However, setting ruff to 135 will allow for longer lines that can't be auto-formatted
line-length = 135
extend-select= ["FIX002"]

[tool.poetry.scripts]
wyzely-detect = "wyzely_detect.__main__:main"