[project]
name = "wyzely-detect"
version = "0.2.1"
description = "Recognize faces/objects in a video stream (from a webcam or a security camera) and send notifications to your devices"
authors = [{name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com"}]
keywords = ["object-detection", "face-detection", "wyze", "security", "yolov8", "unified-push"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.25.0,<0.26.0",
    "opencv-python>=4.8.1.78,<4.9.0",
    "ultralytics>=8.0.190,<9.0.0",
    "hjson>=3.1.0,<4.0.0",
    "numpy>=1.23.2,<2.0.0",
    "torch>=2.1.0,<2.2.0; extra!='cuda'",
    "absl-py>=2.1.0,<3.0.0",
    "tensorflow>=2.13.0,<2.14.0; extra!='cuda'",
    "tensorflow-macos>=2.13.0,<2.14.0; platform_machine=='arm64'",
    "tensorflow-intel>=2.13.0,<2.14.0; platform_system=='Windows'",
    "tensorflow-io-gcs-filesystem<0.32.0; platform_system=='Windows'",
    "deepface>=0.0.79,<0.1.0",
    "prettytable>=3.9.0,<4.0.0"
]

[project.optional-dependencies]
gpu = ["tensorflow[and-cuda] (>=2.14.0,<2.15.0)"]

[project.scripts]
wyzely-detect = "wyzely_detect.__main__:main"

[project.urls]
Repository = "https://github.com/slashtechno/wyzely-detect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["wyzely_detect"]


[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1,<24.0.0",
    "ruff>=0.0.291,<0.1.0",
    "ipykernel>=6.25.2,<7.0.0",
    "nbconvert>=7.9.2,<8.0.0"
]

[tool.hatch.metadata]
allow-direct-references = true

